# TAP-research

./: README.md  drawing.tex
android-dev/: settings.gradle
android-dev/app/: build.gradle
android-dev/app/src/androidTest/java/com/example/tap_prelim/: ExampleInstrumentedTest.java
android-dev/app/src/main/: AndroidManifest.xml
android-dev/app/src/main/res/navigation/: mobile_navigation.xml
android-dev/app/src/main/res/values/: strings.xml  themes.xml
android-dev/app/src/main/res/values-night/: themes.xml
android-dev/gradle/wrapper/: gradle-wrapper.properties
android-dev/randomizer app/app/: build.gradle
android-dev/randomizer app/app/src/main/res/layout/: activity_main.xml
android-dev/randomizer app/gradle/wrapper/: gradle-wrapper.properties
example/: .gitignore  Cargo.toml
example/src/: format.rs  lib.rs
implementation/: Cargo.toml  private.txt  public.txt
implementation/src/: format.rs
meeting-notes/: 11-10-notes.md  12-08-notes.md  12-1-notes.md  12-22-21.md  Rust-pros.md
paper/: Makefile  main.tex  preamble.tex
paper/bibs/: header.bib  references.bib
paper/sections/: abstract.tex  background.tex  conclusion.tex  design.tex  discussion.tex  evaluation.tex  implementation.tex  introduction.tex  problem.tex  related-work.tex
rust/benchmark/: Cargo.toml
rust/benchmark/benches/: my_benchmark.rs  my_benchmarks.rs
rust/benchmark/src/: fib.rs  lib.rs  main.rs
rust/blah/: Cargo.toml
rust/blah/src/: main.rs
rust/enc-dec/: Cargo.toml
rust/enc-dec/src/: main.rs
rust/guessing_game/src/: main.rs
rust/hello/: main
rust/server/: 404.html  hello.html
rust/server/src/: lib.rs  main.rs
rust/slicing/slicing/src/: main.rs
rust/structure/src/: main.rs
(+9 files in other folders)
