[package]
name = "example"
version = "0.1.0"
authors = ["Kevin Liao <kevliao@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3.5"

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"