[package]
name = "example"
version = "0.1.0"
authors = ["Kevin Liao <kevliao@mit.edu>"]
edition = "2018"


[dependencies]
criterion = "0.3.5"
serde = "1.0"
serde_derive = "1.0.136"
bincode = "1.2.1"
openssl = "0.10.28"
serde-encrypt = "0.6.0"

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"