[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"
#edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3.5"

[[bench]]
name = "my_benchmarks"
harness = false

[[bin]]
name = "main"
path = "src/bin/main.rs"